<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">聚游</string>
    <string name="login">登录</string>
    <string name="preview_page1">preview_page1</string>
    <string name="preview_page2">preview_page2</string>
    <string name="preview_page3">preview_page3</string>
    <string name="bottom_bar_juyou">聚游</string>
    <string name="bottom_bar_guanjia">管家</string>
    <string name="bottom_bar_guangchang">广场</string>
    <string name="bottom_bar_wo">我</string>
    <string name="settings_user_info">昵称</string>
    <string name="help_introduction">新手指南</string>
    <string name="help_introduction_tips">介绍本程序基本功能的使用方法</string>
    <string name="help_suggestion">意见反馈</string>
    <string name="help_suggestion_tips">将您的建议和意见反馈给我们</string>
    <string name="help_check_update">检查更新</string>
    <string name="help_current_version">当前版本号：%s</string>
    <string name="traffic_statistics">流量统计</string>
    <string name="help_about">关于我们</string>
    <string name="account_management">账号管理</string>
    <string name="http_share_open_warning_dialog_title">零流量邀请</string>
    <string name="http_share_open_warning_dialog_message">使用零流量邀请将断开当前局域网，是否继续？</string>
    <string name="http_share_title">零流量邀请</string>
    <string name="http_share_first_step">第一步:</string>
    <string name="http_share_second_step">第二步:</string>
    <string name="http_share_first_step_tip">请好友打开手机WiFi，连接无线网络到：\n%s</string>
    <string name="http_share_second_step_tip1">打开浏览器，输入网址：\n%s</string>
    <string name="http_share_second_step_tip2">或者扫描二维码直接下载</string>
    <string name="quit">退出</string>
    <string name="btn_login">会员登录</string>
    <string name="btn_register">快速注册</string>
    <string name="btn_login_direct">游客登录</string>
    <string name="label_psw">密码：</string>
    <string name="label_account">账号：</string>
    <string name="input_hint_account">邮箱/手机号</string>
    <string name="connect_friends">连朋友</string>
    <string name="juyou">聚游</string>
    <string name="guan_jia">管家</string>
    <string name="wo">我</string>
    <string name="application">应用</string>
    <string name="photo">相册</string>
    <string name="picture">图库</string>
    <string name="music">音乐</string>
    <string name="file_document">文档</string>
    <string name="file_compressed">压缩包</string>
    <string name="file_apk">安装包</string>
    <string name="file_all">所有文件</string>
    <string name="copyright_zhaoyan_tech_eng">Copyright © zhaoyan tech</string>
    <string name="copyright_zhaoyan_tech_cn">朝颜信息科技(上海)有限公司·版权所有</string>
    <string name="create_server">创建连接</string>
    <string name="search_ap_tips">在Wi-Fi热点创建的Wi-Fi局域网中与其他人互连。</string>
    <string name="search_wifi_tips">在当前Wi-Fi网络下与其他人互连。</string>
    <string name="network_creator">网络创建者</string>
    <string name="register">注册</string>
    <string name="nick_name_label">昵称：</string>
    <string name="nick_name_input_hint">请输入昵称</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="account_setting">账号设置</string>
    <string name="account_setting_saved_message">设置已保存</string>
    <string name="search_connect">搜索加入</string>
    <string name="searching">搜索中...</string>
    <string name="search_result_none">未发现好友</string>
    <string name="creating_server">正在创建连接...</string>
    <string name="ap_server_number">热点连接  (%d)</string>
    <string name="wifi_server_number_wifi_name_default">Wi-Fi连接</string>
    <string name="wifi_server_number">%1$s (%2$d)</string>
    <string name="disconnect">断开连接</string>
    <string name="file_Category_loading">正在加载...</string>
    <string name="select_head">选择头像</string>
    <string name="capture_head">拍照</string>
    <string name="account">账号</string>
    <string name="customize_head">自定义头像</string>
    <string name="capture_picture">拍摄新照片</string>
    <string name="choose_picture">选择照片</string>
    <string name="user_name_local">我</string>
    <string name="login_dialog_message">正在登录，请稍等。。。</string>
    <string name="login_message_no_network">无网络，请检查当前网络</string>
    <string name="login_fail_timeout">登录失败，登录超时</string>
    <string name="login_fail_account_error">登录失败，用户名或密码错误</string>
    <string name="account_empty_please_input">请输入用户名</string>
    <string name="password_empty_please_input">请输入密码</string>
    <string name="invite_http_opening">正在开启零流量邀请。。。</string>
    <string name="invite_tips">邀请好友安装聚游</string>
    <string name="guang_chang">广场</string>
    <string name="ok">确定</string>
    <string name="delete_confirm">删除确认</string>
    <string name="modify">修改</string>
    <string name="unknow">未知</string>
    <string name="wenxi_tip">温馨提示</string>
    <string name="account_setting_head_image">头像</string>
    <string name="account_setting_name">名字</string>
    <string name="info">属性</string>
    <string name="info_filename">文件名称:</string>
    <string name="info_musicname">歌曲名称:</string>
    <string name="info_imagename">图片名称:</string>
    <string name="info_videoname">视频名称:</string>
    <string name="info_foldername">文件夹名称:</string>
    <string name="info_location">文件路径:</string>
    <string name="info_size">文件大小:</string>
    <string name="info_include">包含:</string>
    <string name="info_include_files">%1$d个文件, %2$d个文件夹</string>
    <string name="info_date">修改日期:</string>
    <string name="info_filetype">文件格式:</string>
    <string name="info_music_info">歌曲信息</string>
    <string name="info_image_info">图片信息</string>
    <string name="info_video_info">视频信息</string>
    <string name="info_file_info">文件信息</string>
    <string name="info_folder_info">文件夹信息</string>
    <string name="info_modify_music_name">修改歌曲名称</string>
    <string name="type_file">类型: 文件</string>
    <string name="type_folder">类型: 文件夹</string>
    <string name="type">文件类型: <xliff:g id="type">%1$s</xliff:g></string>
    <string name="pkg_name">包名: <xliff:g id="package">%1$s</xliff:g></string>
    <string name="version">版本: <xliff:g id="version">%1$s</xliff:g></string>
    <string name="rename">重命名</string>
    <string name="network">网络邻居</string>
    <string name="recommend">精品推荐</string>
    <string name="zy_tiandi">朝颜天地</string>
    <string name="file_browser">批量传输</string>
    <string name="game">游戏</string>
    <string name="app">应用</string>
    <string name="audio">音频</string>
    <string name="video">视频</string>
    <string name="file">文件</string>
    <string name="folder">文件夹</string>
    <string name="camera">相机</string>
    <string name="gallery">图库</string>
    <string name="image">图片</string>
    <string name="media">影音</string>
    <string name="remote_share">远程访问</string>
    <string name="history">记录</string>
    <string name="connect">连接</string>
    <string name="connecting">"正在连接&#8230;"</string>
    <string name="creating">正在创建&#8230;</string>
    <string name="create_ok">创建成功,等待加入&#8230;</string>
    <string name="close">关闭</string>
    <string name="file_Category">文件分类</string>
    <string name="all_file">全部文件</string>
    <string name="sdcard">SD卡</string>
    <string name="internal_sdcard">手机存储</string>
    <string name="no_sdcard">SDCard不存在</string>
    <string name="menu">菜单</string>
    <string name="menu_start">启动</string>
    <string name="menu_open">打开</string>
    <string name="open_file">打开文件</string>
    <string name="send_file">发送文件</string>
    <string name="menu_send">发送</string>
    <string name="menu_backup">备份</string>
    <string name="menu_delete">删除</string>
    <string name="menu_info">属性</string>
    <string name="menu_play">播放</string>
    <string name="menu_more">更多</string>
    <string name="menu_app_info">应用信息</string>
    <string name="menu_uninstall">卸载</string>
    <string name="menu_move_to_game">移至游戏</string>
    <string name="menu_move_to_app">移至应用</string>
    <string name="menu_install">安装</string>
    <string name="copy">复制</string>
    <string name="paste">粘贴</string>
    <string name="cut">剪切</string>
    <string name="create_folder">新建文件夹</string>
    <string name="video_type">电影视频</string>
    <string name="video_type_tip">支持rmvb,mkv,mov,flv等格式</string>
    <string name="doc_type">办公文档</string>
    <string name="doc_type_format">办公文档(%d)</string>
    <string name="doc_type_tip">支持doc,ppt,xls等格式</string>
    <string name="ebook_type">电子书籍</string>
    <string name="ebook_type_format">电子书籍(%d)</string>
    <string name="ebook_type_tip">支持umd,pdf,txt,chm等格式</string>
    <string name="apk_type">应用安装包</string>
    <string name="apk_type_format">应用安装包(%d)</string>
    <string name="apk_type_tip">支持apk格式</string>
    <string name="archive_type">压缩包文件</string>
    <string name="archive_type_format">压缩包文件(%d)</string>
    <string name="archive_type_tip">支持7z,rar,zip,iso等格式</string>
    <string name="big_file_type">大文件</string>
    <string name="big_file_type_tip">支持50M以上任意格式文件</string>
    <string name="item_msg">第<xliff:g id="item">%1$d</xliff:g>项</string>
    <string name="folder_content_null">"&#060;空文件夹&#062;"</string>
    <string name="camera_content_null">"&#060;没有发现照片&#062;"</string>
    <string name="gallery_content_null">"&#060;没有发现图片&#062;"</string>
    <string name="audio_content_null">"&#060;没有发现音频&#062;"</string>
    <string name="video_content_null">"&#060;没有发现视频&#062;"</string>
    <string name="apk_content_null">"&#060;没有发现用户应用程序&#062;"</string>
    <string name="game_app_content_null">"&#060;我还没安装游戏&#062;"</string>
    <string name="dream_app_content_null">"&#060;还没游戏,去下载一个&#062;"</string>
    <string name="cannot_start_app">无法从这里启动该程序</string>
    <string name="app_has_started">该程序已经启动</string>
    <string name="invite_bluetooth">蓝牙邀请</string>
    <string name="invite_bluetooth_first_step">第一步:</string>
    <string name="invite_bluetooth_second_step">第二步:</string>
    <string name="invite_bluetooth_send">搜索-发送</string>
    <string name="invite_bluetooth_first_step_tip">请身边好友打开蓝牙,保持对附近的蓝牙设备可见（如图所示）</string>
    <string name="invite_bluetooth_second_step_tip">好友完成第一步后,请点击搜索-发送按钮，就可以搜索TA的手机并把聚游发送过去</string>
    <string name="back">返回</string>
    <string name="connect_tip_msg">选择与朋友互连</string>
    <string name="search_sever">搜索连接</string>
    <string name="searching_sever">正在搜索&#8230;</string>
    <string name="server_not_found">未发现周围可用连接</string>
    <string name="connectable">可用连接</string>
    <string name="connect_access">已连接,开始远程访问</string>
    <string name="name_setting">设置名称</string>
    <string name="user_name">名称:</string>
    <string name="click_to_set">点我设置名称</string>
    <string name="name_set_tip">名称最大长度为8个字符</string>
    <string name="save_setting">保存设置</string>
    <string name="copy_ready">准备下载:<xliff:g id="copy">%1$s</xliff:g></string>
    <string name="copy_ok">下载完成:<xliff:g id="copy">%1$s</xliff:g></string>
    <string name="copy_fail">下载失败:<xliff:g id="copy">%1$s</xliff:g></string>
    <string name="stop">停止</string>
    <string name="file_exist">此位置已包含同名的文件</string>
    <string name="copy_replace">覆盖</string>
    <string name="copy_replace_msg">使用正在复制中的文件替换目标文件夹的文件\n<xliff:g id="replace">%1$s</xliff:g></string>
    <string name="copy_rename_msg">正在复制的文件将重命名为 “<xliff:g id="rename">%1$s</xliff:g>“</string>
    <string name="copy_cancel">取消</string>
    <string name="copy_cancel_msg">将不会改变任何文件</string>
    <string name="delete_confirm_msg">确定要删除这些？</string>
    <string name="delete_fail">无法删除这个文件</string>
    <string name="delete_music">删除歌曲</string>
    <string name="delete_image">删除图片</string>
    <string name="delete_video">删除视频</string>
    <string name="delete_file">删除文件</string>
    <string name="delete_file_confirm_msg">确定要删除“%1$s”？</string>
    <string name="delete_file_confirm_msg_music">确定要删除这%1$s首歌曲？</string>
    <string name="delete_file_confirm_msg_image">确定要删除这%1$s个图片？</string>
    <string name="traffic_send">发送流量：%s</string>
    <string name="traffic_receive">接收流量：%s</string>
    <string name="traffic_notice">通过聚游手机之间互传文件的时候不会消耗任何一部手机的移动网络流量，
         某些流量统计软件会有计算错误的情况，请放心使用！</string>
    <string name="select_all">全选</string>
</resources>