<?xml version="1.0" encoding="utf-8"?>
<menu
     xmlns:zhaoyan="http://schemas.android.com/apk/res/com.zhaoyan.juyou" 
    >
    <item 
        zhaoyan:id="@+id/menu_send"
        zhaoyan:title="@string/menu_send"
        zhaoyan:icon_enable="@drawable/ic_action_send_enable"
        zhaoyan:icon_disable="@drawable/ic_action_send_disable"
        zhaoyan:enabled="true"
        />
    
     <item 
        zhaoyan:id="@+id/menu_copy"
        zhaoyan:title="@string/copy"
        zhaoyan:icon_enable="@drawable/ic_action_copy_enable"
        zhaoyan:icon_disable="@drawable/ic_action_copy_disable"
        zhaoyan:enabled="true"
        />
     
      <item 
        zhaoyan:id="@+id/menu_cut"
        zhaoyan:title="@string/cut"
        zhaoyan:icon_enable="@drawable/ic_action_cut_enable"
        zhaoyan:icon_disable="@drawable/ic_action_cut_disable"
        zhaoyan:enabled="true"
        />
    
    <item 
        zhaoyan:id="@+id/menu_delete"
        zhaoyan:title="@string/menu_delete"
        zhaoyan:icon_enable="@drawable/ic_action_delete_enable"
        zhaoyan:icon_disable="@drawable/ic_action_delete_disable"
        zhaoyan:enabled="true"
        />
    
    <item 
        zhaoyan:id="@+id/menu_select"
        zhaoyan:title="@string/select_all"
        zhaoyan:icon_enable="@drawable/ic_aciton_select"
        zhaoyan:icon_disable="@drawable/ic_aciton_select"
        zhaoyan:enabled="true"
        />
    
    <item 
        zhaoyan:id="@+id/menu_more"
        zhaoyan:title="@string/menu_more"
        zhaoyan:icon_enable="@drawable/ic_action_overflow_enable"
        zhaoyan:icon_disable="@drawable/ic_action_overflow_disable"
        zhaoyan:enabled="true"
        />
</menu>
