<?xml version="1.0" encoding="utf-8"?>
<menu
     xmlns:zhaoyan="http://schemas.android.com/apk/res/com.zhaoyan.juyou" 
    >
    <item 
        zhaoyan:zyId="@+id/menu_send"
        zhaoyan:zyTitle="@string/menu_send"
        zhaoyan:zyIconEnable="@drawable/ic_action_send_enable"
        zhaoyan:zyIconDisable="@drawable/ic_action_send_disable"
        zhaoyan:zyEnabled="true"
        />
    
    <item 
        zhaoyan:zyId="@+id/menu_backup"
        zhaoyan:zyTitle="@string/menu_backup"
        zhaoyan:zyIconEnable="@drawable/ic_action_backup_enable"
        zhaoyan:zyIconDisable="@drawable/ic_action_backup_disable"
        zhaoyan:zyEnabled="true"
        />
    
    <item 
        zhaoyan:zyId="@+id/menu_uninstall"
        zhaoyan:zyTitle="@string/menu_uninstall"
        zhaoyan:zyIconEnable="@drawable/ic_aciton_uninstall_enable"
        zhaoyan:zyIconDisable="@drawable/ic_aciton_uninstall_disable"
        zhaoyan:zyEnabled="true"
        />
    
    <item 
        zhaoyan:zyId="@+id/menu_move_app"
        zhaoyan:zyTitle="@string/menu_move_to_app"
        zhaoyan:zyIconEnable="@drawable/ic_action_move_to_enable"
        zhaoyan:zyIconDisable="@drawable/ic_action_move_to_disable"
        zhaoyan:zyEnabled="true"
        />
    
    <item 
        zhaoyan:zyId="@+id/menu_app_info"
        zhaoyan:zyTitle="@string/menu_app_info"
        zhaoyan:zyIconEnable="@drawable/ic_action_app_info_enable"
        zhaoyan:zyIconDisable="@drawable/ic_action_app_info_disbale"
        zhaoyan:zyEnabled="true"
        />
    
    <item 
        zhaoyan:zyId="@+id/menu_select"
        zhaoyan:zyTitle="@string/select_all"
        zhaoyan:zyIconEnable="@drawable/ic_aciton_select"
        zhaoyan:zyIconDisable="@drawable/ic_aciton_select"
        zhaoyan:zyEnabled="true"
        />
</menu>
