<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5d91be" >

    <com.zhaoyan.common.view.AspectRatioImageView
        android:id="@+id/iv_login_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true" />

    <LinearLayout
        android:id="@+id/ll_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/iv_login_top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip" >

            <EditText
                android:id="@+id/et_account"
                style="@style/login_input"
                android:hint="@string/input_hint_account"
                android:inputType="textEmailAddress"
                android:maxLength="50" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tv_account"
                style="@style/login_label"
                android:layout_alignBottom="@id/et_account"
                android:layout_alignTop="@id/et_account"
                android:text="@string/label_account" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="5.0dip" >

            <EditText
                android:id="@+id/et_psw"
                style="@style/login_input"
                android:inputType="textPassword"
                android:maxLength="50" />

            <TextView
                android:id="@+id/tv_psw"
                style="@style/login_label"
                android:layout_alignBottom="@id/et_psw"
                android:layout_alignTop="@id/et_psw"
                android:text="@string/label_psw" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_input"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_register"
            android:layout_width="120.0dip"
            android:layout_height="35.0dip"
            android:background="@drawable/btn_selector"
            android:text="@string/btn_register"
            android:textColor="@color/button_text_selector"
            android:textSize="16.0sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="120.0dip"
            android:layout_height="35.0dip"
            android:layout_marginLeft="30.0dip"
            android:background="@drawable/btn_selector"
            android:text="@string/btn_login"
            android:textColor="@color/button_text_selector"
            android:textSize="16.0sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/copyright_zhaoyan_tech_eng"
        android:textColor="#ffffff"
        android:textSize="12sp" >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_login_copyright"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/copyright_zhaoyan_tech_cn"
        android:textColor="#404040"
        android:textSize="16sp" >
    </TextView>

</RelativeLayout>