<?xml version="1.0" encoding="utf-8"?>
<com.zhaoyan.common.view.RightSlideLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_background" >

        <include
            android:id="@+id/title"
            layout="@layout/title" />

        <LinearLayout
            android:id="@+id/ll_traffic_color"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/title"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_traffic_color"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:background="@color/traffic_send" />

                <TextView
                    android:id="@+id/tv_send_traffic"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/traffic_send" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:background="@color/traffic_receive" />

                <TextView
                    android:id="@+id/tv_receive_traffic"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/traffic_receive" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/traffic_notice_iv" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/traffic_notice" />
        </LinearLayout>
    </RelativeLayout>

</com.zhaoyan.common.view.RightSlideLayout>